# youtube-summarizer-mcp

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  api_server.py  get_full_transcript.py  main.py  mcp_server.py  mcp_server_http.py  pyproject.toml  smithery.yaml  summarize_prompt.md  test_mcp.py  yt  yt-summarize
.claude/agents/: chamath-investor.md
deep_dives/: README.md
deep_dives/AIPowerInfrastructure/: README.md  SUBSTACK_POST.md
deep_dives/Google/: EXECUTIVE_SUMMARY.md  PROJECT_NOTES.md  README.md  README_original.md  (+3 more)
prompts/: chamath_investment_analysis.md  summarize_prompt.md
scripts/: yt  yt-summarize
summaries/: a16z_zuckerberg.md  ai_spending_controversy_and_market_reaction.md  ased_on_this_transcript_about_lya_utskever_s_views_on_scaling_superintelligence_and_safety_here_s_an_appropriate_filename_ilya_sutskever_superintelligence_scaling_limits_generalization.md  chamath_palihapitiya_mistakes_success_energy_future.md  chris_lattner_llvm_swift_mojo_interview.md  don_t_see_a_video_summary_in_your_message_ould_you_please_provide_the_video_summary_you_d_like_me_to_generate_a_filename_for.md  executive_presence_leadership_communication.md  google_ai_innovators_dilemma_transformer_origins_to_gemini.md  groq_founders.md  groq_jonathan_ross_inference_chip_startup_interview.md  jensen-huang-joe-rogan-learnings-advice.md  jensen_huang_nvidia_ai_interview.md  nvidia_gtc_2025_jensen_huang_keynote.md  summary.md  three_essential_programming_books_sicp_csapp_ddia.md  youtube_video_summary_jonathan_ross_on_ai_compute_and_the_future_of_technology.md
(+325 files in other folders)
