[project]
name = "youtube-transcript-mcp"
version = "0.1.0"
description = "YouTube Transcript API Server with MCP support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "youtube-transcript-api>=1.1.0",
    "requests>=2.32.0",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",
    "mcp[cli]>=1.9.4",
    "httpx>=0.28.1",
]
